# clinikondo

./: .gitignore  README.md  patients.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: CHANGELOG_duplicatas.md  debug_ocr.md  prompt_base.txt  requisites.md
src/clinikondo/: __init__.py  __main__.py  config.py  hash_tracker.py  llm.py  models.py  patients.py  processing.py  types.py  utils.py
src/medifolder/: __init__.py  __main__.py  config.py  llm.py  processing.py  types.py  utils.py
tests/: test_processing.py
