[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medifolder"
version = "0.1.0"
description = "Sistema de classificação de documentos médicos usando LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Seu Nome", email = "seu-email@example.com" },
]
keywords = ["medifolder", "llm", "document-classification", "medical"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.35.0",
  "pathlib-abc>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.3.0",
  "mypy>=1.5.0",
  "build>=1.0.0",
]
pdf = [
  "PyPDF2>=3.0.0",
]
ocr = [
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[project.urls]
homepage = "https://example.com"
repository = "https://example.com/medifolder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true
